create my app button

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -192,7 +192,8 @@
         "site-header": "כותרת האתר",
         "config": "הגדרות מערכת",
         "by-invitation": "צרוף עורכים בהזמנה בלבד",
-        "auto-reg": "אפשר הרשמה עצמית"
+        "auto-reg": "אפשר הרשמה עצמית",
+        "create-new-app": "ליצירת האתר שלי"
     },
     "chats": {
         "chats": "קבוצות דיון",
