--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -193,7 +193,8 @@
         "site-header": "Site header",
         "config": "System definitions",
         "by-invitation": "Only manager adds editors",
-        "auto-reg": "Enable auto registration"
+        "auto-reg": "Enable auto registration",
+        "create-new-app": "Create my own site"
     },
     "chats": {
         "chats": "Chats",
