--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -162,7 +162,7 @@
         "password": "Password",
         "register": "Sign up",
         "forgot-password": "I forgot the password",
-        "reset-password": "Reset the password",
+        "reset-password": "Submit the new password",
         "confirm-password": "Confirm password",
         "first-name": "First Name",
         "last-name": "Last Name",
@@ -177,6 +177,7 @@
         "incomplete-registration": "Registration was not completed",
         "email-already-exists": "This email already exists",
         "howto-finalize-registration": "To complete registration, check your email. If there is no message from us, check your span folder",
+        "howto-complete-reset-password": "Please enter the new password. After you submit it, a confirmation email will be sent to you",
         "register-done": "Got it",
         "passwords-dont-match": "Passwords don't match",
         "chat-rooms": "Chat rooms",
