--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -160,7 +160,7 @@
         "password": "סיסמה",
         "register": "הרשם",
         "forgot-password": "שכחתי את הסיסמה",
-        "reset-password": "הכנס סיסמה חדשה",
+        "reset-password": "שלח את הסיסמה חדשה",
         "confirm-password": "אישור סיסמה",
         "first-name": "שם פרטי",
         "last-name": "שם משפחה",
@@ -175,6 +175,7 @@
         "incomplete-registration": "ההרשמה טרם הושלמה",
         "email-already-exists": "אימייל זה כבר רשום במערכת",
         "howto-finalize-registration": "כדי להשלים את ההרשמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
+        "howto-complete-reset-password": " הכנס את הסיסמה (פעמיים) ושלח אותה. כדי להשלים את החלפת הסיסמה, בדוק את תיבת הדואל שלך. אם לא קיבלת הודעה מאיתנו, בדוק את דואר הזבל שלך",
         "register-done": "הבנתי",
         "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
         "chat-rooms": "קבוצות דיון",
