--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -151,7 +151,18 @@
         "pa-of": "Father of",
         "ma-of": "Mother of",
         "default-name": "New member",
-        "filters": "Filters"
+        "filters": "Filters",
+        "dead-or-alive": "Alive members?",
+        "dead": "deceased",
+        "alive": "alive",
+        "which-gender": "Which gender?",
+        "members-f": "Females",
+        "members-m": "Males",
+        "no-gender": "Gender unknown",
+        "new-question": "New question",
+        "new-option": "New option",
+        "enter-question": "Enter new question",
+        "enter-option": "Enter new option"
     },
     "user": {
         "hit-counts": "מונה הכניסות",
