--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -150,7 +150,18 @@
         "pa-of": "אבא של",
         "ma-of": "אמא של",
         "default-name": "חבר חדש",
-        "filters": "מסננים"
+        "filters": "מסננים",
+        "dead-or-alive": "עדיין אתנו?",
+        "dead": "כבר לא איתנו",
+        "alive": "איתנו",
+        "which-gender": "איזה מין?",
+        "members-f": "חברות",
+        "members-m": "חברים",
+        "no-gender": "טרם הוגדר",
+        "new-question": "שאלה חדשה",
+        "new-option": "תשובה חדשה",
+        "enter-question": "הקלד שאלה חדשה",
+        "enter-option": "הקלד תשובה חדשה"
     },
     "user": {
         "login": "התחבר כעורך ",
