--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -96,6 +96,7 @@
         "family-connections": "Family Connections",
         "life-summary": "Life summary of ",
         "editing-member": "Edit member details",
+        "title": "Title",
         "first-name": "First name",
         "last-name": "Last name",
         "former-first-name": "Former first name",
