--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -95,6 +95,7 @@
         "family-connections": "קשרי משפחה",
         "life-summary": " קיצור תולדות החיים של",
         "editing-member": "עריכת פרטי החבר",
+        "title": "תואר",
         "first-name": "שם פרטי",
         "last-name": "שם משפחה",
         "former-first-name": "שם פרטי קודם",
