multilingual access manage

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -419,7 +419,22 @@
         "device-details": "Device details"
     },
     "admin": {
-        "access-manager": "Access Manager",
+        "admin": "Admin",
+        "developer": "Developer", 
+        "editor": "Editor", 
+        "commentator": "Commentator", 
+        "photo_uploader": "Photo uploader", 
+        "access_manager": "Access manager", 
+        "access-manager": "Access Manager", 
+        "chatter": "Chatter", 
+        "chat_moderator": "Chat moderator", 
+        "text_auditor": "Text auditor", 
+        "data_auditor": "Data auditor", 
+        "help_author": "Help author", 
+        "advanced": "Advanced", 
+        "mail_watcher": "Mail watcher", 
+        "archiver": "Archiver", 
+        "tester": "Tester",
         "duplicate-app-name": "Name is alrady in use!",
         "new-app-requested": "Your request is being processed",
         "app-name": "New site ID",
