--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -420,7 +420,22 @@
         "device-details": "פרטי המכשיר"
     },
     "admin": {
-        "access-manager": "ניהול משתמשים",
+        "admin": "מנהל מערכת",
+        "developer": "מפתח", 
+        "editor": "עורך", 
+        "commentator": "יכול להעיר", 
+        "photo_uploader": "מעלה תמונות", 
+        "access_manager": "ניהול משתמשים", 
+        "access-manager": "ניהול משתמשים", 
+        "chatter": "תורם בחדרי שיחה", 
+        "chat_moderator": "מנהל חדרי שיחה", 
+        "text_auditor": "מבקר טקסטים", 
+        "data_auditor": "מבקר נתונים", 
+        "help_author": "מחבר הודעות עזרה", 
+        "advanced": "מתקדם", 
+        "mail_watcher": "מקבל הודעות דואר", 
+        "archiver": "ארכיונאי", 
+        "tester": "בודק",
         "duplicate-app-name": "מזהה האתר כבר תפוס!",
         "new-app-requested": "בקשתך בטיפול. אנא בדוק את תיבת הדואל שלך. אם לא קבלת הודעה תוך מספר דקות, בדוק את תיבת דואר הזבל.",
         "app-name": "מזהה האתר שלך (באותיות לועזיות)",
