--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -324,7 +324,8 @@
         "cancel": "בטל",
         "audios-were-selected": "הקלטות נבחרו",
         "upload-in-progress": "...ההקלטות נשלחות לשרת",
-        "left": "נותרו"
+        "left": "נותרו",
+        "apply-to-selected": "יִשֵּׂם להקלטות שנבחרו"
     },
     "videos": {
         "videos": "סרטים",
@@ -504,5 +505,6 @@
     "result3": "תמונות",
     "result4": "מונחים",
     "result8": "סרטים",
-    "result9": "מסמכים"
+    "result9": "מסמכים",
+    "result10": "הקלטות"
 }
