--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -309,7 +309,7 @@
         "select-new-copies": "Select new copies",
         "no-duplicates-found": "No duplicates found",
         "show-in-photo-page": "Show in photos page",
-        "edit-filters": "Topics and artists",
+        "edit-filters": "Topics, photographers and artists",
         "crop": "Crop",
         "save-crop": "Save crop",
         "cancel-crop": "Cancel crop",
@@ -357,9 +357,9 @@
         "uploaded-this-month": "Audios uploaded this month",
         "uploaded-this-quarter": "Audios uploaded this quarter",
         "uploaded-this-year": "Audios uploaded this year",
-        "click-artist": "Search author and click on it",
-        "no-artists-yet": "No audio authors yet",
-        "artists": "Audio authors"
+        "click-recorder": "Search author and click on it",
+        "no-recorders-yet": "No audio authors yet",
+        "recorders": "Audio authors"
     },
     "docs": {
         "docs": "Docs",
