quiz clear. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -173,7 +173,8 @@
         "edit-answer": "Edit option text",
         "prompt": "Prompt",
         "description": "Description",
-        "answer-text": "Answer text"
+        "answer-text": "Answer text",
+        "clear-all": "Clear"
     },
     "user": {
         "hit-counts": "מונה הכניסות",
