--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -518,6 +518,7 @@
     "result2": "Stories",
     "result3": "Photos",
     "result4": "Terms",
+    "resuslt6": "Help messages",
     "result8": "Video",
     "result9": "Document",
     "result10": "Audio"
