--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -518,6 +518,7 @@
     "result2": "ספורים",
     "result3": "תמונות",
     "result4": "מונחים",
+    "resuslt6": "הודעות עזרה",
     "result8": "סרטים",
     "result9": "מסמכים",
     "result10": "הקלטות"
