group photo upload started

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -225,7 +225,9 @@
         "new-app-disabled": "No new app button",
         "gallery": "Gallery",
         "audio-enabled": "Audio supported",
-        "audio-disabled": "Audio not supported"
+        "audio-disabled": "Audio not supported",
+        "site-title": "Site title",
+        "site-description": "Site description"
     },
     "chats": {
         "chats": "Chats",
