--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -416,7 +416,9 @@
         "edit": "עריכה",
         "delete": "מחיקה",
         "save": "שמירה",
-        "cancel": "ביטול"
+        "cancel": "ביטול",
+        "link": "קישור",
+        "link-copied": "הקישור הועתק"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
