group upload photo. wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -418,7 +418,8 @@
         "cancel": "Cancel",
         "link": "Link",
         "link-copied": "Link was copied",
-        "upload-logo": "Upload"
+        "upload-logo": "Upload",
+        "select-photo": "Select photo"
     },
     "consts": {
         "vis-never": "Never display!",
