--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -419,7 +419,11 @@
         "link": "Link",
         "link-copied": "Link was copied",
         "upload-logo": "Upload",
-        "select-photo": "Select photo"
+        "select-photo": "Select photo",
+        "photo-story": "Tell the story of the photo",
+        "info-header": "Photo and sender details",
+        "explain-registration": "One-time registration is needed to upload photos",
+        "login": "Log in"
     },
     "consts": {
         "vis-never": "Never display!",
