group photo - wip.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -423,7 +423,7 @@
         "select-photo": "בחר תמונה",
         "photo-story": "ספר על התמונה שהעלית",
         "info-header": "פרטי השולח והתמונה",
-        "explain-registratin": "כדי להעלות תמונות יש לבצע הרשמה חד-פעמית",
+        "explain-registration": "כדי להעלות תמונות יש לבצע הרשמה חד-פעמית",
         "login": "התחבר"
     },
     "consts": {
