--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -423,7 +423,8 @@
         "photo-story": "Tell the story of the photo",
         "info-header": "Photo and sender details",
         "explain-registration": "One-time registration is needed to upload photos",
-        "login": "Log in"
+        "login": "Log in",
+        
     },
     "consts": {
         "vis-never": "Never display!",
