--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -448,7 +448,8 @@
         "unselect": "בטל את בחירת המילה",
         "change-group": "העבר לקבוצה אחרת",
         "edit-item": "ערוך את שם הפריט",
-        "remove-item": "בטל לגמרי את הפריט"
+        "remove-item": "בטל לגמרי את הפריט",
+        "show-untagged": "--הצג בלתי מתויגים--"
     },
     "locales": {
         "he": "עברית",
