bad typo in story-detail. groups wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -417,6 +417,7 @@
         "save": "Save",
         "cancel": "Cancel",
         "link": "Link",
+        "send-email": "Send link",
         "link-copied": "Link was copied",
         "upload-logo": "Upload",
         "select-photo": "Select photo",
