--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -418,6 +418,7 @@
         "save": "שמירה",
         "cancel": "ביטול",
         "link": "קישור",
+        "send-email": "שלח קישור",
         "link-copied": "הקישור הועתק",
         "upload-logo": "שלח",
         "select-photo": "בחר תמונה",
