--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -319,7 +319,9 @@
         "prev-slide": "התמונה הקודמת",
         "recognized": "תמונות שזוהו",
         "unrecognized": "תמונות שלא זוהו",
-        "recognized-or-not": "תמונות שזוהו ושלא זוהו"
+        "recognized-or-not": "תמונות שזוהו ושלא זוהו",
+        "story": "בחירת תמונות הקשורות לסיפור",
+        "term": "בחירת תמונות הקשורות למונח"
     },
     "audios": {
         "audios": "הקלטות",
@@ -425,7 +427,9 @@
         "photo-story": "ספר על התמונה שהעלית",
         "info-header": "פרטי השולח והתמונה",
         "explain-registration": "כדי להעלות תמונות יש לבצע הרשמה חד-פעמית",
-        "login": "התחבר"
+        "login": "התחבר",
+        "click": "כדי להעלות את התמונות שלך, הקלק על הקישור",
+        "regards": "בברכה"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
