--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -320,7 +320,9 @@
         "prev-slide": "Prev photo",
         "recognized": "Recognized photos",
         "unrecognized": "Unrecognized photos",
-        "recognized-or-not": "Both recognized and unrecognized"
+        "recognized-or-not": "Both recognized and unrecognized",
+        "story": "Select photos associated with the story",
+        "term": "Select photos associated with the term"
     },
     "videos": {
         "videos": "Video",
@@ -424,7 +426,9 @@
         "photo-story": "Tell the story of the photo",
         "info-header": "Photo and sender details",
         "explain-registration": "One-time registration is needed to upload photos",
-        "login": "Log in"
+        "login": "Log in",
+        "click": "To upload your photos, link this link",
+        "regards": "Regards"
     },
     "consts": {
         "vis-never": "Never display!",
