--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -429,7 +429,8 @@
         "explain-registration": "כדי להעלות תמונות יש לבצע הרשמה חד-פעמית",
         "login": "התחבר",
         "click": "כדי להעלות את התמונות שלך, הקלק על הקישור",
-        "regards": "בברכה"
+        "regards": "בברכה",
+        "next-photo": "העלה עוד תמונה"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
