--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -430,7 +430,11 @@
         "login": "התחבר",
         "click": "כדי להעלות את התמונות שלך, הקלק על הקישור",
         "regards": "בברכה",
-        "next-photo": "העלה עוד תמונה"
+        "next-photo": "העלה עוד תמונה",
+        "save-photo-story": "שמור את ספורה של התמונה",
+        "ready-to-select": "",
+        "photo-uploaded": "הקלק על התמונה כדי לזהות בה אנשים",
+        "ready-to-save": "מוכן להעלאת התמונה"
     },
     "consts": {
         "vis-never": "לא ניתן לתצוגה!",
